<resources>
    <string name="app_name">Krave</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="app_id">665389216877994</string>
    <string name="ga_trackingId">UA-53195174-1</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. Please help me fix this by sending us error data, all you have to do is click \'OK\'.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_notif_ticker_text">Unexpected error, please send a report...</string>
    <string name="crash_notif_title">Feather crashed...</string>
    <string name="crash_notif_text">Please click here to help fix the issue.</string>
    <string name="launch_editor">Launch Editor</string>
    <string name="choose_photo">Choose a Photo</string>
    <string name="external_storage_na_title">Attention</string>
    <string name="external_storage_na_message">sdcard is missing or currently not mounted. Cannot continue.</string>
    <string name="get_mobile_library">Get Android Library</string>
    <string name="view_documentation">View Documentation</string>
    <string name="hi_res_service_label">HI-RES Service</string>
    <string name="crash_toast_text">Ooooops! I crashed, but a report has been sent to my developer to help him fix the issue!</string>
    <string name="image_details">Image Details</string>
    <string name="ma_crop_ver1_button">Start Crop Algorithm Version 1</string>
    <string name="ma_crop_ver2_button">Start Crop Algorithm Version 2</string>
    <string name="ma_info_text">Click on button below to start cropping image.</string>
    <string name="cp_info_text">Resize/Orient Image to Fit Face Inside the Orange Circle</string>
    <string name="cp_image_contentDesc">Image</string>
    <string name="cp_template_contentDesc">Template</string>
    <string name="cp_change_img_contentDesc">Change Image</string>
    <string name="cp_crop_button">Crop Image</string>
    <string name="cp_template_button">Change Template</string>
    <string name="sd_select_template_text">Select Template</string>
    <string name="sd_icon_contentDesc">Template Icons</string>
    <string-array name="country_arrays">
        <item>English</item>
    </string-array>
    <string-array name="language_arrays">
        <item>English</item>
        <item>Spanish</item>
        <item>Portuguese</item>
    </string-array>
    <string-array name="ethnicity_sample">
        <item>White</item>
        <item>Black</item>
        <item>Asian</item>
        <item>Latino</item>
        <item>Other</item>
    </string-array>
    <string-array name="role_sample">
        <item>Top</item>
        <item>Top/Versatile</item>
        <item>Bottom</item>
        <item>Bottom/Versatile</item>
        <item>Versatile</item>
        <item>Rather Not Say</item>
    </string-array>
    <string-array name="relationship_status_array">
        <item>Single</item>
        <item>In a Relationship</item>
        <item>Don\'t Show</item>
        <item>Open Relationship</item>
    </string-array>
    <string-array name="interest_array">
        <item>MUSIC</item>
        <item>DANCE</item>
        <item>MUSCLE</item>
        <item>TWINK</item>
        <item>LEATHER</item>
        <item>MILITARY</item>
        <item>COLLEGE</item>
        <item>POZ</item>
        <item>null</item>
        <item>null</item>
        <item>null</item>
        <item>TRANSGENDER</item>
        <item>COWBOY</item>
    </string-array>
    <string-array name="body_type_array">
        <item>Undecided</item>
        <item>Slim</item>
        <item>Medium</item>
        <item>Athletic</item>
        <item>Large</item>
    </string-array>
    <string name="splash_already_a_krave_user">Already a Krave user?</string>
    <string name="splash_login_here"><u>Login Here</u></string>
    <string name="aboutme_save">SAVE</string>
    <string name="aboutme_About_me_xxx_characters">About me (xxx characters)</string>
    <string name="addphoto">Add Photo</string>
    <string name="addphoto_privacy">Privacy</string>
    <string name="addphoto_public">Public</string>
    <string name="addphoto_private">Private</string>
    <string name="addphoto_upload_photo">UPLOAD PHOTO</string>
    <string name="block_what_do_you_want">What do you want</string>
    <string name="block_to_do">to do ?</string>
    <string name="block_want_to_do">want to do ?</string>
    <string name="report_cancel">Cancel</string>
    <string name="report_report">Report</string>
    <string name="report_guy_name">Guy Name</string>
    <string name="report_why_are_you_reporting_this_guy">Why are you reporting this guy?</string>
    <string name="report_spam">Spam</string>
    <string name="report_inappropriateoffensive">Inappropriate/Offensive</string>
    <string name="report_other">Other</string>
    <string name="crop_crop_image">CROP IMAGE</string>
    <string name="crop_Cancel">Cancel</string>
    <string name="crop_Save">Save</string>
    <string name="crop_Crop">Crop</string>
    <string name="feedback_give_us_feedback">Give us feedback!</string>
    <string name="forgotpassword_forgotten_your_password">Forgotten your password ?</string>
    <string name="forgotpassword_enter_your_email">enter your email</string>
    <string name="forgotpassword_subtitel">We\'ll email you with a link to reset your password. Please enter the email address used to register and we\'ll contact you shortely.</string>
    <string name="forgotpassword_send">SEND</string>
    <string name="forgotpassword_cancel">CANCEL</string>
    <string name="forgot_email_forgot_your_email">Forgotten Your Email?</string>
    <string name="forgotemail_subtitel">Enter your phone number and we will display which email you used and send you a password reset link.</string>
    <string name="forgotemail_enter_your_phone_number">enter your phone number</string>
    <string name="login_email">	\tEmail</string>
    <string name="login_password">\tPassword</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_forgot_your_email">Forgot Your Email?</string>
    <string name="login_sign_in_with_social">Sign in with Social</string>
    <string name="login_not_a_krave_user_yet">Not a Krave User Yet?</string>
    <string name="registration_language">Language</string>
    <string name="registration_name">Display Name</string>
    <string name="registration_email">Email</string>
    <string name="registration_mobile">Mobile</string>
    <string name="registration_password">Password</string>
    <string name="registration_confirm_password">Confirm Password</string>
    <string name="registration_accept">Accept</string>
    <string name="registration_terms_and_conditions">Terms and Conditions</string>
    <string name="registration_submit">SUBMIT</string>
    <string name="registration_what_are_you">What are you?</string>
    <string name="registration_height">Height</string>
    <string name="registration_weight">Weight</string>
    <string name="registration_age">Age</string>
    <string name="registration_don_t_show">Don\'t Show</string>
    <string name="registration_relationship_status">Relationship Status</string>
    <string name="registration_single">\t\t\t\tSingle</string>
    <string name="registration_in_a_relationship">\t\t\t\tIn a Relationship</string>
    <string name="registration_open_relationship">\t\t\t\tOpen Relationship</string>
    <string name="registration_don_post_show">\t\t\t\tDon\'t Show</string>
    <string name="registration_what_do_you_krave">What do you Krave?</string>
    <string name="registration_interest">Interest</string>
    <string name="registration_profile">Profile</string>
    <string name="registration_about_me_180_max_characters">About me (180 max characters)</string>
    <string name="registration_please_fill_in_your">Please fill in your</string>
    <string name="registration_years">Years</string>
    <string name="registration_term_and_conditions">TERM AND CONDITIONS</string>
    <string name="rightpanel_search">Search...</string>
    <string name="rightpanel_edit">Edit</string>
    <string name="rightpanel_clear_all">Clear All</string>
    <string name="rightpanel_cancel">Cancel</string>
    <string name="rightpanel_delete">Delete</string>
    <string name="leftpanel_profile">Profile</string>
    <string name="leftpanel_find_guys">Find Guys</string>
    <string name="leftpanel_search_city">Search City</string>
    <string name="leftpanel_daily_krave">Daily Krave</string>
    <string name="leftpanel_favorites">Favorites</string>
    <string name="leftpanel_nightlife_finder">Nightlife Finder</string>
    <string name="leftpanel_notifications">Notifications</string>
    <string name="leftpanel_settings">Settings</string>
    <string name="leftpanel_contact_us">Contact Us</string>
    <string name="leftpanel_logout">Logout</string>
    <string name="chat_add_to_list">ADD TO LIST</string>
    <string name="chat_view_profile">VIEW PROFILE</string>
    <string name="chat_block_this_user">BLOCK THIS USER</string>
    <string name="chat_delete_history">DELETE HISTORY</string>
    <string name="chat_cancel">CANCEL</string>
    <string name="chat_take_a_picture">TAKE A PICTURE</string>
    <string name="chat_from_gallery">FROM GALLERY</string>
    <string name="chat_share_picture">SHARE PICTURE</string>
    <string name="chat_share_picturevideo">SHARE PICTURE/VIDEO</string>
    <string name="chat_share_private_photo">SHARE PRIVATE PHOTO</string>
    <string name="chat_share_location">SHARE LOCATION</string>
    <string name="chat_3_seconds">3 seconds</string>
    <string name="chat_7_seconds">7 seconds</string>
    <string name="chat_11_seconds">11 seconds</string>
    <string name="chat_unlimited">Unlimited</string>
    <string name="home_show_online_only">Show Online Only</string>
    <string name="home_photos">Photos</string>
    <string name="home_interests">Interests</string>
    <string name="home_love">Love</string>
    <string name="home_fun">Fun</string>
    <string name="home_undecided">Undecided</string>
    <string name="home_miles_away">\tmiles away</string>
    <string name="home_online">online\t</string>
    <string name="home_online_recently">online recently</string>
    <string name="home_days">\tday/s\t</string>
    <string name="dialog_send_request_to_see_his_private_photo">Do you want to send request to see his private photo?</string>
    <string name="dialog_do_you_want_to_allow_him">Do you want to allow him?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_close">close</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_this_is_how_people_see_you_on_krave_so">This is how people see you on Krave so...</string>
    <string name="dialog_no_nudity_or_obscenity">∙ No nudity or obscenity</string>
    <string name="dialog_use_a_clear_photo">∙ Use a clear photo</string>
    <string name="dialog_be_in_a_well_lit_place">∙ Be in a well-lit place</string>
    <string name="dialog_be_alone_in_your_photo">∙ Be alone in your photo</string>
    <string name="dialog_take_picture">Take Picture</string>
    <string name="dialog_make_profile_picture">MAKE PROFILE PICTURE</string>
    <string name="dialog_from_gallery">From Gallery</string>
    <string name="dialog_delete_picture">Delete Picture</string>
    <string name="dialog_do_you_want_to_send_request_to_see_his_private_photo">Do you want to send request to see his private photo?</string>
</resources>