<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc000000" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/login_top_layout_margin_left"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_email_forgot_your_email"
            android:textColor="@color/white"
            android:textSize="@dimen/home2_text5_size" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_top_layout_margin_left"
            android:layout_marginTop="@dimen/login_top_layout_margin_left"
            android:gravity="center"
            android:text="@string/forgotemail_subtitel"
            android:textColor="@color/white"
            android:textSize="@dimen/home2_text4_size" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/block_dude_button_height"
            android:background="@drawable/edittext_forgot_pass_bg"
            android:ems="10"
            android:hint="@string/forgotemail_enter_your_phone_number"
            android:inputType="phone"
            android:maxLength="10" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="@dimen/block_dude_button_height"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/forgot_password_send_button"
            android:text="@string/forgotpassword_send"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/block_dude_button_height"
            android:background="@drawable/forgot_password_cancel_button"
            android:text="@string/forgotpassword_cancel"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>