<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/dialog_gallery_background"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/titel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:lines="2"
            android:text="@string/dialog_do_you_want_to_send_request_to_see_his_private_photo"
            android:textColor="@color/white"
            android:textSize="@dimen/home2_text4_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/dialog_send_photo_request_white_button_selector"
                android:padding="10dp"
                 android:textSize="@dimen/home2_text4_size" 
                android:text="@string/dialog_no"
                android:textColor="@color/gray" />

            <Button
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                 android:textSize="@dimen/home2_text4_size" 
                android:background="@drawable/dialog_gallery_button_orange_selector"
                android:padding="10dp"
                android:text="@string/dialog_yes"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>